--- a/package.json
+++ b/package.json
@@ -18,17 +18,26 @@
     "next": "15.3.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sortablejs": "^1.15.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.1.2",
     "@types/react-dom": "^19",
+    "@types/sortablejs": "^1.15.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4.1.4",
+    "ts-jest": "^29.3.2",
     "typescript": "^5"
   }
 }
